// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderToHtml(isomorphicComponent) nested isomorphic component renders correctly 1`] = `
<head></head>

<body>
  <div id="0123456789abcdef">
    <section>
      <ul>
        <li>27</li>
        <li>72</li>
        <li>
          <section>625</section>
        </li>
      </ul>
    </section>
  </div>
  <script type="text/javascript">
    Object.assign(["__ISO_DATA__", "iso-nested", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {};
    }, window), {
      "props": {
        "coefficient": 9
      },
      "hydration": {
        "iso-nested--2b1c3f975f963b3b383915d72886130d868bf0f5f7e0b5dc58cba04f8581e3f4": {
          "v": 3,
          "w": 8
        },
        "iso-simple--2bc503c2a073d8b6c93b14fe5e8b6486a36f8a3d04de79f13c5dc02af4f5b107": {
          "baseValue": 5
        }
      }
    });
  </script>
</body>
`;

exports[`renderToHtml(isomorphicComponent) non-isomorphic component with mount point className renders as a regular element 1`] = `
<head></head>

<body>
  <div>
    <div data-reactroot="">Hello ;)</div>
  </div>
</body>
`;

exports[`renderToHtml(isomorphicComponent) non-isomorphic component without mount point className renders as a regular element 1`] = `
<head></head>

<body>
  <div class="mount-point">
    <div data-reactroot="">Hello ;)</div>
  </div>
</body>
`;

exports[`renderToHtml(isomorphicComponent) simple isomorphic component with mount point className renders correctly 1`] = `
<head></head>

<body>
  <div id="0123456789abcdef" class="mount-point">
    <section>625</section>
  </div>
  <script type="text/javascript">
    Object.assign(["__ISO_DATA__", "iso-simple", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {};
    }, window), {
      "props": {
        "power": 4
      },
      "hydration": {
        "iso-simple--2bc503c2a073d8b6c93b14fe5e8b6486a36f8a3d04de79f13c5dc02af4f5b107": {
          "baseValue": 5
        }
      }
    });
  </script>
</body>
`;

exports[`renderToHtml(isomorphicComponent) simple isomorphic component without mount point className renders correctly 1`] = `
<head></head>

<body>
  <div id="0123456789abcdef">
    <section>625</section>
  </div>
  <script type="text/javascript">
    Object.assign(["__ISO_DATA__", "iso-simple", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {};
    }, window), {
      "props": {
        "power": 4
      },
      "hydration": {
        "iso-simple--2bc503c2a073d8b6c93b14fe5e8b6486a36f8a3d04de79f13c5dc02af4f5b107": {
          "baseValue": 5
        }
      }
    });
  </script>
</body>
`;

exports[`renderToHtml(isomorphicComponent) styled nested isomorphic component renders correctly 1`] = `
<head>
  <style data-styled-components="lmVDjZ eNTiKw">
    /* sc-component-id: StyledSection-semgqu-0 */

    .lmVDjZ {
      padding: 7px;
      background: #bbb;
    }

    /* sc-component-id: StyledList-semgqu-1 */

    .eNTiKw {
      margin: 7px;
      background: #666;
      color: #ddd;
    }
  </style>
</head>

<body>
  <div id="0123456789abcdef">
    <section class="StyledSection-semgqu-0 lmVDjZ">
      <ul class="StyledList-semgqu-1 eNTiKw">
        <li>27</li>
        <li>72</li>
        <li>
          <section>625</section>
        </li>
      </ul>
    </section>
  </div>
  <script type="text/javascript">
    Object.assign(["__ISO_DATA__", "iso-nested-with-styles", "0123456789abcdef"].reduce(function(a, b) {
      return a[b] = a[b] || {};
    }, window), {
      "props": {
        "coefficient": 9
      },
      "hydration": {
        "iso-nested-with-styles--2b1c3f975f963b3b383915d72886130d868bf0f5f7e0b5dc58cba04f8581e3f4": {
          "v": 3,
          "w": 8
        },
        "iso-simple--2bc503c2a073d8b6c93b14fe5e8b6486a36f8a3d04de79f13c5dc02af4f5b107": {
          "baseValue": 5
        }
      }
    });
  </script>
</body>
`;
